Layout tela de cadastro 1.0.4

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,21 +14,21 @@
     <header>
       <picture>
         <a href="index.html">
-        <source media="(min-width: 900px)" srcset="img/logo-150.png">
-        <source media="(min-width: 600px)" srcset="img/logo-150.png">
-        <img src="img/logo-150.png" alt="logo">
-      </a>
+          <source media="(min-width: 900px)" srcset="img/logo-150.png">
+          <source media="(min-width: 600px)" srcset="img/logo-150.png">
+          <img src="img/logo-150.png" alt="logo">
+        </a>
       </picture>
     </header>
     <nav>
       <ul>
         <li><a href="login.html">Fazer Login</a></li>
-        <li><a href="#">Cadastre-se</a></li>
+        <li><a href="cadastro.html">Cadastre-se</a></li>
       </ul>
     </nav>
     <main>
       <!--<header>Produtos</header>-->
-      
+
       <section id="produtos">
         <section class="produto">
           <img src="img/produto01.jpg">
@@ -48,8 +49,8 @@
           </section>
           <section class="botao">
             <p>Comprar</p>
+          </section>
         </section>
-      </section>
 
         <section class="produto">
           <img src="img/produto03.jpg">
@@ -59,7 +60,7 @@
           </section>
           <section class="botao">
             <p>Comprar</p>
-        </section>
+          </section>
         </section>
 
         <section class="produto">
@@ -70,7 +71,7 @@
           </section>
           <section class="botao">
             <p>Comprar</p>
-        </section>
+          </section>
         </section>
 
         <section class="produto">
@@ -81,7 +82,7 @@
           </section>
           <section class="botao">
             <p>Comprar</p>
-        </section>
+          </section>
         </section>
 
         <section class="produto">
@@ -117,97 +118,97 @@
           </section>
         </section>
 
-      <section class="produto">
-        <img src="img/produto09.jpg">
-        <p>Console <br> Xbox Series X</p>
-        <section class="preco">
-          <p><strong>R$ 2.899,90</strong></p>
+        <section class="produto">
+          <img src="img/produto09.jpg">
+          <p>Console <br> Xbox Series X</p>
+          <section class="preco">
+            <p><strong>R$ 2.899,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
         </section>
-        <section class="botao">
-          <p>Comprar</p>
-        </section>
-      </section>
 
-      <section class="produto">
-        <img src="img/produto05.jpg">
-        <p>SSD A400 <br> Kingston - 240GB</p>
-        <section class="preco">
-          <p><strong>R$ 209,90</strong></p>
+        <section class="produto">
+          <img src="img/produto05.jpg">
+          <p>SSD A400 <br> Kingston - 240GB</p>
+          <section class="preco">
+            <p><strong>R$ 209,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
         </section>
-        <section class="botao">
-          <p>Comprar</p>
-        </section>
-      </section>
 
-      <section class="produto">
-        <img src="img/produto10.jpg">
-        <p>HyperX - Memória Fury de 16GB </p>
-        <section class="preco">
-          <p><strong>R$ 639,90</strong></p>
+        <section class="produto">
+          <img src="img/produto10.jpg">
+          <p>HyperX - Memória Fury de 16GB </p>
+          <section class="preco">
+            <p><strong>R$ 639,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
         </section>
-        <section class="botao">
-          <p>Comprar</p>
-        </section>
-      </section>
 
-    <section class="produto">
-      <img src="img/produto06.jpg">
-      <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
-      <section class="preco">
-        <p><strong>R$ 38,90</strong></p>
-      </section>
-      <section class="botao">
-        <p>Comprar</p>
-      </section>
-    </section>
+        <section class="produto">
+          <img src="img/produto06.jpg">
+          <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
+          <section class="preco">
+            <p><strong>R$ 38,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
+        </section>
 
-      <section class="produto">
-        <img src="img/produto13.jpg">
-        <p>Teclado Gamer Redragon Mecânico </p>
-        <section class="preco">
-          <p><strong>R$ 309,99</strong></p>
+        <section class="produto">
+          <img src="img/produto13.jpg">
+          <p>Teclado Gamer Redragon Mecânico </p>
+          <section class="preco">
+            <p><strong>R$ 309,99</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
         </section>
-        <section class="botao">
-          <p>Comprar</p>
+
+        <section class="produto">
+          <img src="img/produto14.jpg">
+          <p>Controle DualSense - Branco </p>
+          <section class="preco">
+            <p><strong>R$ 399,00</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
         </section>
+
+        <section class="produto">
+          <img src="img/produto15.jpg">
+          <p>Controle sem Fio Xbox - Robot White</p>
+          <section class="preco">
+            <p><strong>R$ 419,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
+        </section>
+
+        <section class="produto">
+          <img src="img/produto16.jpg">
+          <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
+          <section class="preco">
+            <p><strong>R$ 3.419,00</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+          </section>
+        </section>
+
+
       </section>
-
-      <section class="produto">
-        <img src="img/produto14.jpg">
-        <p>Controle DualSense - Branco </p>
-        <section class="preco">
-          <p><strong>R$ 399,00</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
-        </section>
-      </section>
-
-      <section class="produto">
-        <img src="img/produto15.jpg">
-        <p>Controle sem Fio Xbox - Robot White</p>
-        <section class="preco">
-          <p><strong>R$ 419,90</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
-        </section>
-      </section>
-
-      <section class="produto">
-        <img src="img/produto16.jpg">
-        <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
-        <section class="preco">
-          <p><strong>R$ 3.419,00</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
-        </section>
-      </section>
-
-
-        </section>
-     </main>
+    </main>
     <footer>
       <p>© Copyright 2021-2021 easytech.com.br - All Rights Reserved</p>
     </footer>
