--- a/login.html
+++ b/login.html
@@ -24,9 +24,9 @@
 
         body {
             background: linear-gradient(45deg, #ff9162, #ff4c00);
-            background-repeat: no-repeat;
+            background-repeat:no-repeat;
             min-height: 100vh;
-            min-width: 0vw;
+            min-width: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -43,7 +43,7 @@
 
         main.container {
             background: white;
-            min-width: 320px;
+            min-width: 380px;
             min-height: 50vh;
             padding: 2rem;
             box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
