Ajuste tam. logo

--- a/cadastro.html
+++ b/cadastro.html
@@ -174,7 +174,7 @@
             <header>
                 <picture>
                     <a href="index.html">
-                        <img src="img/logo-150.png" alt="logo">
+                        <img src="img/logo-150.png" alt="logo" width="118px">
                     </a>
                 </picture>
             </header>
