--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <header>
       <picture>
         <a href="index.html">
-          <source media="(min-width: 900px)" srcset="img/logo-150.png">
-          <source media="(min-width: 600px)" srcset="img/logo-150.png">
-          <img src="img/logo-150.png" alt="logo">
+          <img src="img/logo-150.png" alt="logo" width="118px">
         </a>
       </picture>
     </header>
