Update layout produtos 1.0.6

--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
     </header>
     <nav>
       <ul>
+        <li><a href="index.html">Início</a></li>
         <li><a href="login.html">Fazer Login</a></li>
         <li><a href="cadastro.html">Cadastre-se</a></li>
       </ul>
     </nav>
-    <main>
-      <!--<header>Produtos</header>-->
 
+    <main>
+      
       <section id="produtos">
         <section class="produto">
+          <a href="p01.MonitorGamer23.6Acer144HzFullHD.html">
           <img src="img/produto01.jpg">
-          <p>Monitor Gamer Acer 23.6' Curvo Full HD</p>
+          <p>Monitor Gamer 23.6" Acer 144Hz FullHD</p>
           <section class="preco">
-            <p><strong>R$ 1.649,90</strong></p>
+            <p><strong>R$ 1.555,44</strong></p>
           </section>
           <section class="botao">
             <p>Comprar</p>
+          </a>
           </section>
         </section>
 
@@ -204,9 +207,9 @@
           </section>
         </section>
 
-
       </section>
     </main>
+
     <footer>
       <p>© Copyright 2021-2021 easytech.com.br - All Rights Reserved</p>
     </footer>
