--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 
 
         body {
-            background: linear-gradient(45deg, #ff9162, #ff4c00);
+            background: linear-gradient(45deg, #20425e, #2d81c5);
             background-repeat:no-repeat;
             min-height: 100vh;
             min-width: 0;
@@ -64,7 +64,7 @@
             bottom: 3px;
             left: 0;
             border-radius: 8px;
-            background: linear-gradient(45deg, #ff9162, #ff4c00);
+            background: linear-gradient(45deg, #20425e, #2d81c5);
         }
 
         
@@ -94,7 +94,7 @@
             width: 100%;
             bottom: -5px;
             left: 0;
-            background: linear-gradient(45deg, #ff9162, #ff4c00);
+            background: linear-gradient(45deg, #20425e, #2d81c5);
             transform: scaleX(0);
             transition: all .2s ease-in-out;
             transform-origin: left;
@@ -113,7 +113,7 @@
         form input[type="submit"] {
             margin-top: 2rem;
             padding: 0.4rem;
-            background-color: #ff4c00;
+            background-color: #2d81c5;
             color: #ffffff;
             cursor: pointer;
             font-size: 0.9rem;
@@ -130,13 +130,13 @@
 
         form input[type="submit"]:hover {
             letter-spacing: 0.5px;
-            background: linear-gradient(45deg, #ff9162, #ff4c00);
+            background: linear-gradient(45deg, #20425e, #2d81c5);
         }
 
         form input[type="button"] {
             margin-top: 2rem;
             padding: 0.4rem;
-            background-color: #ff4c00;
+            background-color: #2d81c5;
             color: #ffffff;
             cursor: pointer;
             font-size: 0.9rem;
@@ -148,7 +148,7 @@
 
         form input[type="button"]:hover {
             letter-spacing: 0.5px;
-            background: linear-gradient(45deg, #ff9162, #ff4c00);
+            background: linear-gradient(45deg, #20425e, #2d81c5);
         }
 
         .footer {
@@ -173,7 +173,7 @@
         .footer .cadastro a:hover {
             text-decoration: underline;
             text-decoration: none;
-            color: #ff4c00
+            color: #2d81c5
         }
 
         .footer span {
@@ -238,7 +238,7 @@
             <div class="button">
             <input type="submit" value="Entrar">
             <a href="index.html">
-            <input type="button" value="Voltar">
+            <input type="button" value="Início">
         </div>
         </a>
         </form>
