Update layout produtos 1.0.7

--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
         </section>
 
         <section class="produto">
+          <a href="p02.HyperXTecladoMecanicoGamerRGB.html.html">
           <img src="img/produto02.jpg">
-          <p>HyperX Teclado Mecânico Gamer RGB</p>
+          <p>Teclado Mecânico Gamer HyperX RGB</p>
           <section class="preco">
-            <p><strong>R$ 359,90</strong></p>
+            <p><strong>R$ 299,90</strong></p>
           </section>
           <section class="botao">
             <p>Comprar</p>
+          </a>
           </section>
         </section>
 
