--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
     </nav>
 
     <main>
-      
+
       <section id="produtos">
         <section class="produto">
           <a href="p01.MonitorGamer23.6Acer144HzFullHD.html">
-          <img src="img/produto01.jpg">
-          <p>Monitor Gamer 23.6" Acer 144Hz FullHD</p>
-          <section class="preco">
-            <p><strong>R$ 1.555,44</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
+            <img src="img/produto01.jpg">
+            <p>Monitor Gamer 23.6" Acer 144Hz FullHD</p>
+            <section class="preco">
+              <p><strong>R$ 1.555,44</strong></p>
+            </section>
+            <section class="botao">
+              <p>Comprar</p>
           </a>
-          </section>
         </section>
+      </section>
 
-        <section class="produto">
-          <a href="p02.HyperXTecladoMecanicoGamerRGB.html.html">
+      <section class="produto">
+        <a href="p02.HyperXTecladoMecanicoGamerRGB.html.html">
           <img src="img/produto02.jpg">
           <p>Teclado Mecânico Gamer HyperX RGB</p>
           <section class="preco">
@@ -51,163 +51,175 @@
           </section>
           <section class="botao">
             <p>Comprar</p>
+        </a>
+      </section>
+      </section>
+
+      <section class="produto">
+        <a href="p03.MouseGamerLogitech8.000DPI-Black.html">
+        <img src="img/produto03.jpg">
+        <p>Mouse Gamer Logitech 8.000 DPI - Black</p>
+        <section class="preco">
+          <p><strong>R$ 109,90</strong></p>
+        </section>
+        <section class="botao">
+          <p>Comprar</p>
           </a>
-          </section>
         </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto03.jpg">
-          <p>Mouse Gamer Logitech 8.000 DPI - Black</p>
-          <section class="preco">
-            <p><strong>R$ 114,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <a href="P04.MouseGamerRedragonCobraRGB7Botões10000DPILunarWhiteM711W.html">
+        <img src="img/produto11.jpg">
+        <p>Mouse Gamer Redragon <br> Cobra Lunar 10.000 DPI</p>
+        <section class="preco">
+          <p><strong>R$ 109,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </a>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto11.jpg">
-          <p>Mouse Gamer Redragon <br> Cobra Lunar 10.000 DPI</p>
-          <section class="preco">
-            <p><strong>R$ 129,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <a href="p05.HeadsetGamerHyperXCloudStingerS7.1SurroundBlack.html">
+        <img src="img/produto12.jpg">
+        <p>Headset Gamer HyperX Cloud Stinger S</p>
+        <section class="preco">
+          <p><strong>R$ 435,55</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </a>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto12.jpg">
-          <p>Headset Gamer HyperX Cloud Stinger S</p>
-          <section class="preco">
-            <p><strong>R$ 296,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <a href="p06.CadeiraGamerTC3ThunderX3PretoVermelho.html">
+        <img src="img/produto04.jpg">
+        <p>Cadeira Gamer THUNDERX3 - Red</p>
+        <section class="preco">
+          <p><strong>R$ 1.399,95</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto04.jpg">
-          <p>Cadeira Gamer THUNDERX3 - Red</p>
-          <section class="preco">
-            <p><strong>R$ 1.499,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <a href="p07.CadeiraGamerTC3ThunderX3Preto.html">
+        <img src="img/produto07.jpg">
+        <p>Cadeira Gamer THUNDERX3 - Black</p>
+        <section class="preco">
+          <p><strong>R$ 1.399,95</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </a>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto07.jpg">
-          <p>Cadeira Gamer THUNDERX3 - Black</p>
-          <section class="preco">
-            <p><strong>R$ 1.499,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <a href="p08.ConsolePlayStation5.html">
+        <img src="img/produto08.jpg">
+        <p>Console <br> PlayStation 5</p>
+        <section class="preco">
+          <p><strong>R$ 6.068,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </a>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto08.jpg">
-          <p>Console <br> PlayStation 5</p>
-          <section class="preco">
-            <p><strong>R$ 5.499,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto09.jpg">
+        <p>Console <br> Xbox Series X</p>
+        <section class="preco">
+          <p><strong>R$ 2.899,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto09.jpg">
-          <p>Console <br> Xbox Series X</p>
-          <section class="preco">
-            <p><strong>R$ 2.899,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto05.jpg">
+        <p>SSD A400 <br> Kingston - 240GB</p>
+        <section class="preco">
+          <p><strong>R$ 209,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto05.jpg">
-          <p>SSD A400 <br> Kingston - 240GB</p>
-          <section class="preco">
-            <p><strong>R$ 209,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto10.jpg">
+        <p>HyperX - Memória Fury de 16GB </p>
+        <section class="preco">
+          <p><strong>R$ 639,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto10.jpg">
-          <p>HyperX - Memória Fury de 16GB </p>
-          <section class="preco">
-            <p><strong>R$ 639,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto06.jpg">
+        <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
+        <section class="preco">
+          <p><strong>R$ 38,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto06.jpg">
-          <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
-          <section class="preco">
-            <p><strong>R$ 38,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto13.jpg">
+        <p>Teclado Gamer Redragon Mecânico </p>
+        <section class="preco">
+          <p><strong>R$ 309,99</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto13.jpg">
-          <p>Teclado Gamer Redragon Mecânico </p>
-          <section class="preco">
-            <p><strong>R$ 309,99</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto14.jpg">
+        <p>Controle DualSense - Branco </p>
+        <section class="preco">
+          <p><strong>R$ 399,00</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto14.jpg">
-          <p>Controle DualSense - Branco </p>
-          <section class="preco">
-            <p><strong>R$ 399,00</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto15.jpg">
+        <p>Controle sem Fio Xbox - Robot White</p>
+        <section class="preco">
+          <p><strong>R$ 419,90</strong></p>
         </section>
+        <section class="botao">
+          <p>Comprar</p>
+        </section>
+      </section>
 
-        <section class="produto">
-          <img src="img/produto15.jpg">
-          <p>Controle sem Fio Xbox - Robot White</p>
-          <section class="preco">
-            <p><strong>R$ 419,90</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+      <section class="produto">
+        <img src="img/produto16.jpg">
+        <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
+        <section class="preco">
+          <p><strong>R$ 3.419,00</strong></p>
         </section>
-
-        <section class="produto">
-          <img src="img/produto16.jpg">
-          <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
-          <section class="preco">
-            <p><strong>R$ 3.419,00</strong></p>
-          </section>
-          <section class="botao">
-            <p>Comprar</p>
-          </section>
+        <section class="botao">
+          <p>Comprar</p>
         </section>
+      </section>
 
       </section>
     </main>
