--- a/p08.ConsolePlayStation5.html
+++ b/p08.ConsolePlayStation5.html
@@ -35,7 +35,7 @@
 
           <section class="conteudo">
             <div section="imagem">
-              <a><img src="/img/produto08.jpg" width="400px"></a>
+              <a><img src="img/produto08.jpg" width="400px"></a>
 
               <br />
               <a><img src="img/produto08.2.jpg" class="img" width="80"></a>
