--- a/index.html
+++ b/index.html
@@ -134,90 +134,106 @@
       </section>
 
       <section class="produto">
+        <a href="p09.ConsoleXboxSeriesX.html">
         <img src="img/produto09.jpg">
         <p>Console <br> Xbox Series X</p>
         <section class="preco">
-          <p><strong>R$ 2.899,90</strong></p>
+          <p><strong>R$ 2.469,91</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="P10.SSDA400KingstonSA400S37.240G.html">
         <img src="img/produto05.jpg">
         <p>SSD A400 <br> Kingston - 240GB</p>
         <section class="preco">
-          <p><strong>R$ 209,90</strong></p>
+          <p><strong>R$ 189,90</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="P11.HyperX-MemoriaFuryde16GB.html">
         <img src="img/produto10.jpg">
         <p>HyperX - Memória Fury de 16GB </p>
         <section class="preco">
-          <p><strong>R$ 639,90</strong></p>
+          <p><strong>R$ 779,00</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="P12.MousePadProfessionalGamerHavit.html">
         <img src="img/produto06.jpg">
         <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
         <section class="preco">
-          <p><strong>R$ 38,90</strong></p>
+          <p><strong>R$44,90</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="P13.TecladoMecanicoGamerRedragonKumara.html">
         <img src="img/produto13.jpg">
         <p>Teclado Gamer Redragon Mecânico </p>
         <section class="preco">
-          <p><strong>R$ 309,99</strong></p>
+          <p><strong>R$ 242,00</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="p14.ControleDualSense-Branco.html">
         <img src="img/produto14.jpg">
         <p>Controle DualSense - Branco </p>
         <section class="preco">
-          <p><strong>R$ 399,00</strong></p>
+          <p><strong>R$ 359,10</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="p15.ControleSemFioXboxRobotWhite.html">
         <img src="img/produto15.jpg">
         <p>Controle sem Fio Xbox - Robot White</p>
         <section class="preco">
-          <p><strong>R$ 419,90</strong></p>
+          <p><strong>R$ 404,91</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
       <section class="produto">
+        <a href="p16.MonitorGamerAlienwareFullHDIPS.html">
         <img src="img/produto16.jpg">
         <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
         <section class="preco">
-          <p><strong>R$ 3.419,00</strong></p>
+          <p><strong>R$3.509,10</strong></p>
         </section>
         <section class="botao">
           <p>Comprar</p>
+        </a>
         </section>
       </section>
 
