Update icon social 1.1.2

--- a/login.html
+++ b/login.html
@@ -192,6 +192,15 @@
         }
 
         .footer .social-field a i {
+            margin-top: 15px;
+            text-align: center;
+            align-items: center;
+            margin: 0 0.5rem;
+            width: 15px;
+        }
+
+        .footer .social-field a img {
+            margin-top: 2px;
             margin: 0 0.5rem;
             width: 15px;
         }
@@ -252,13 +261,15 @@
             <div class="social-fields">
                 <div class="social-field facebook">
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
+                      <!--  <i class="fab fa-facebook-f"></i> -->
+                        <img src="img/facebook.png" alt="">
                         Entrar com Facebook
                     </a>
                 </div>
                 <div class="social-field twitter">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <!--  <i class="fab fa-twitter"></i> -->
+                        <img src="img/logo-twitter-png-fundo-transparente7.png" alt="">
                         Entrar com Twitter
                     </a>
                 </div>
