--- a/index.html
+++ b/index.html
@@ -57,191 +57,191 @@
 
       <section class="produto">
         <a href="p03.MouseGamerLogitech8.000DPI-Black.html">
-        <img src="img/produto03.jpg">
-        <p>Mouse Gamer Logitech 8.000 DPI - Black</p>
-        <section class="preco">
-          <p><strong>R$ 109,90</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
-          </a>
-        </section>
+          <img src="img/produto03.jpg">
+          <p>Mouse Gamer Logitech 8.000 DPI - Black</p>
+          <section class="preco">
+            <p><strong>R$ 109,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+        </a>
+      </section>
       </section>
 
       <section class="produto">
         <a href="P04.MouseGamerRedragonCobraRGB7Botões10000DPILunarWhiteM711W.html">
-        <img src="img/produto11.jpg">
-        <p>Mouse Gamer Redragon <br> Cobra Lunar 10.000 DPI</p>
-        <section class="preco">
-          <p><strong>R$ 109,90</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto11.jpg">
+          <p>Mouse Gamer Redragon <br> Cobra Lunar 10.000 DPI</p>
+          <section class="preco">
+            <p><strong>R$ 109,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p05.HeadsetGamerHyperXCloudStingerS7.1SurroundBlack.html">
-        <img src="img/produto12.jpg">
-        <p>Headset Gamer HyperX Cloud Stinger S</p>
-        <section class="preco">
-          <p><strong>R$ 435,55</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto12.jpg">
+          <p>Headset Gamer HyperX Cloud Stinger S</p>
+          <section class="preco">
+            <p><strong>R$ 435,55</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p06.CadeiraGamerTC3ThunderX3PretoVermelho.html">
-        <img src="img/produto04.jpg">
-        <p>Cadeira Gamer THUNDERX3 - Red</p>
-        <section class="preco">
-          <p><strong>R$ 1.399,95</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
-        
-        </section>
+          <img src="img/produto04.jpg">
+          <p>Cadeira Gamer THUNDERX3 - Red</p>
+          <section class="preco">
+            <p><strong>R$ 1.399,95</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
+
+      </section>
       </section>
 
       <section class="produto">
         <a href="p07.CadeiraGamerTC3ThunderX3Preto.html">
-        <img src="img/produto07.jpg">
-        <p>Cadeira Gamer THUNDERX3 - Black</p>
-        <section class="preco">
-          <p><strong>R$ 1.399,95</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto07.jpg">
+          <p>Cadeira Gamer THUNDERX3 - Black</p>
+          <section class="preco">
+            <p><strong>R$ 1.399,95</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p08.ConsolePlayStation5.html">
-        <img src="img/produto08.jpg">
-        <p>Console <br> PlayStation 5</p>
-        <section class="preco">
-          <p><strong>R$ 6.068,90</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto08.jpg">
+          <p>Console <br> PlayStation 5</p>
+          <section class="preco">
+            <p><strong>R$ 6.068,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p09.ConsoleXboxSeriesX.html">
-        <img src="img/produto09.jpg">
-        <p>Console <br> Xbox Series X</p>
-        <section class="preco">
-          <p><strong>R$ 2.469,91</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto09.jpg">
+          <p>Console <br> Xbox Series X</p>
+          <section class="preco">
+            <p><strong>R$ 2.469,91</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="P10.SSDA400KingstonSA400S37.240G.html">
-        <img src="img/produto05.jpg">
-        <p>SSD A400 <br> Kingston - 240GB</p>
-        <section class="preco">
-          <p><strong>R$ 189,90</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto05.jpg">
+          <p>SSD A400 <br> Kingston - 240GB</p>
+          <section class="preco">
+            <p><strong>R$ 189,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="P11.HyperX-MemoriaFuryde16GB.html">
-        <img src="img/produto10.jpg">
-        <p>HyperX - Memória Fury de 16GB </p>
-        <section class="preco">
-          <p><strong>R$ 779,00</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto10.jpg">
+          <p>HyperX - Memória Fury de 16GB </p>
+          <section class="preco">
+            <p><strong>R$ 779,00</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="P12.MousePadProfessionalGamerHavit.html">
-        <img src="img/produto06.jpg">
-        <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
-        <section class="preco">
-          <p><strong>R$44,90</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto06.jpg">
+          <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
+          <section class="preco">
+            <p><strong>R$44,90</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="P13.TecladoMecanicoGamerRedragonKumara.html">
-        <img src="img/produto13.jpg">
-        <p>Teclado Gamer Redragon Mecânico </p>
-        <section class="preco">
-          <p><strong>R$ 242,00</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto13.jpg">
+          <p>Teclado Gamer Redragon Mecânico </p>
+          <section class="preco">
+            <p><strong>R$ 242,00</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p14.ControleDualSense-Branco.html">
-        <img src="img/produto14.jpg">
-        <p>Controle DualSense - Branco </p>
-        <section class="preco">
-          <p><strong>R$ 359,10</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto14.jpg">
+          <p>Controle DualSense - Branco </p>
+          <section class="preco">
+            <p><strong>R$ 359,10</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p15.ControleSemFioXboxRobotWhite.html">
-        <img src="img/produto15.jpg">
-        <p>Controle sem Fio Xbox - Robot White</p>
-        <section class="preco">
-          <p><strong>R$ 404,91</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto15.jpg">
+          <p>Controle sem Fio Xbox - Robot White</p>
+          <section class="preco">
+            <p><strong>R$ 404,91</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       <section class="produto">
         <a href="p16.MonitorGamerAlienwareFullHDIPS.html">
-        <img src="img/produto16.jpg">
-        <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
-        <section class="preco">
-          <p><strong>R$3.509,10</strong></p>
-        </section>
-        <section class="botao">
-          <p>Comprar</p>
+          <img src="img/produto16.jpg">
+          <p>Monitor Gamer Alienware Full HD IPS 24,5" 240Hz</p>
+          <section class="preco">
+            <p><strong>R$3.509,10</strong></p>
+          </section>
+          <section class="botao">
+            <p>Comprar</p>
         </a>
-        </section>
+      </section>
       </section>
 
       </section>
     </main>
 
     <footer>
-      <p>© Copyright 2021-2021 easytech.com.br - All Rights Reserved</p>
+      <p>© Copyright 2021-2021 easytech.com.br - All Rights Reserved.</p>
     </footer>
   </div>
 </body>
