--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
 
       <section class="produto">
-        <a href="P04.MouseGamerRedragonCobraRGB7Botões10000DPILunarWhiteM711W.html">
+        <a href="p04.MouseGamerRedragonCobraRGB7Botões10000DPILunarWhiteM711W.html">
           <img src="img/produto11.jpg">
           <p>Mouse Gamer Redragon <br> Cobra Lunar 10.000 DPI</p>
           <section class="preco">
@@ -147,7 +147,7 @@
       </section>
 
       <section class="produto">
-        <a href="P10.SSDA400KingstonSA400S37.240G.html">
+        <a href="p10.SSDA400KingstonSA400S37.240G.html">
           <img src="img/produto05.jpg">
           <p>SSD A400 <br> Kingston - 240GB</p>
           <section class="preco">
@@ -160,7 +160,7 @@
       </section>
 
       <section class="produto">
-        <a href="P11.HyperX-MemoriaFuryde16GB.html">
+        <a href="p11.HyperX-MemoriaFuryde16GB.html">
           <img src="img/produto10.jpg">
           <p>HyperX - Memória Fury de 16GB </p>
           <section class="preco">
@@ -173,7 +173,7 @@
       </section>
 
       <section class="produto">
-        <a href="P12.MousePadProfessionalGamerHavit.html">
+        <a href="p12.MousePadProfessionalGamerHavit.html">
           <img src="img/produto06.jpg">
           <p>Mouse Pad Professional Gamer Havit 30x90 cm</p>
           <section class="preco">
@@ -186,7 +186,7 @@
       </section>
 
       <section class="produto">
-        <a href="P13.TecladoMecanicoGamerRedragonKumara.html">
+        <a href="p13.TecladoMecanicoGamerRedragonKumara.html">
           <img src="img/produto13.jpg">
           <p>Teclado Gamer Redragon Mecânico </p>
           <section class="preco">
