--- a/index.html
+++ b/index.html
@@ -239,9 +239,8 @@
 
       </section>
     </main>
-
     <footer>
-      <p>© Copyright 2021-2021 easytech.com.br - All Rights Reserved.</p>
+      <p>&copy; Desenvolvido por Mateus Alves - <a href="https://github.com/matealves" target="_blank">Acesse meu GitHub</a></p>
     </footer>
   </div>
 </body>
